# ekdosi

./: .gitignore  Makefile  README.md  bootstrap.sh  environment.yml  gpu_validate.py  pyproject.toml  virtual-packages.yml
datasets/: __init__.py  _squad_dataset.py
ekdosi/: __init__.py
ekdosi/__module/: __init__.py
ekdosi/__module/utils/: __init__.py
ekdosi/configs/: __init__.py  _configs.py  test_config.yml
ekdosi/errors/: __init__.py  _custom_errors.py
ekdosi/models/: __init__.py  _bert.py  _multi_output_reg.py  attention.py  eval.py  model_base.py  trainer.py  xgboosttrainer.py
ekdosi/models/components/: __init__.py  _embedding.py  _geometric_dense.py  _geometric_stepdown_dense.py  _temporal_components.py
ekdosi/rag/leaderboard/: __init__.py  _log.py  _schema.py
ekdosi/settings/: __init__.py  _report.py
ekdosi/settings/logging/: __init__.py  _console_logger.py  _terminal_colours.py
ekdosi/utils/: __init__.py  _optimizers.py
glottis/: __init__.py
glottis/__module/: __init__.py  _module_reference.py
glottis/__module/utils/: __init__.py  _import_timer.py
glottis/configs/: __init__.py  _configs.py
glottis/datasets/: __init__.py
glottis/errors/: __init__.py
glottis/models/: __init__.py  _bert.py  model_base.py
glottis/settings/: __init__.py  _report.py  _special_paths.py
glottis/settings/logging/: __init__.py  _console_logger.py
glottis/train/: __init__.py
glottis/train/squad_qa/: squad_train_config.yml  squad_trainer.py
pipelines/squad_qa/: config.yml
pipelines/squad_qa/inference/: inference.py
(+2 files in other folders)
